<resources>
    <string name="app_name">Popular  Movies</string>
    <string name="movie_poster_description">The poster of the image on the detailed view</string>
    <string name="thumbnail_description">The thumbnail that is going to be display in the grid_view</string>
    <string name="movie_title_label">Title: </string>
    <string name="user_rating_label">User Rating: </string>
    <string name="release_date_label">Release Date: </string>
    <string name="movie_plot_label">Movie Plot: </string>
    <string name="default_movie_title">Default Title</string>
    <string name="trailer_label">Trailer: </string>
    <string name="read_reviews">Read reviews</string>
    <string name="trailer_play_button_description">Button for playing trailers</string>
    <string name="review_author_label">Review Author</string>
    <string name="most_popular_menu_title">Most Popular</string>
    <string name="highest_rating_menu_title">Highest Rating</string>
    <string name="favorites_menu_title">Favorites</string>
</resources>
