<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <ImageView
                android:id="@+id/movie_poster_iv"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:srcCompat="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/movie_poster_description"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title_label"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/movie_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_rating_label"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/user_rating_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date_label"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/release_date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_plot_label"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/plot_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailer_label"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000"/>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/trailer_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>




        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>